--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -32,10 +32,10 @@ skill:
       progress : "70%"
       color : "#ffbcaa"
 
-# Esperienze
+# Experience
 experience:
   enable : true
-  title : "Experience"
+  title : "Esperienze"
   item: 
     - logo : "images/experience/icon-1.png"
       title : "Junior UX Designer"
