homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Ciao! Mi chiamo <br> Daniele <br> UX designer"
+  title : "Ciao! Mi chiamo <br> Daniele <br> Graphic Designer"
 
 # about
 about:
