homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Ciao! Sono <br> Daniele <br> Graphic Designer"
+  title : "Ciao! <br> Daniele Verzolini <br> Graphic Designer"
 
 # about
 about:
