--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -40,7 +40,7 @@ experience:
     - logo : "images/experience/icon-1.png"
       title : "Junior UX Designer"
       company : "WEBEX"
-      duration : "Jan 2007 - Feb 2009"
+      duration : "Gen 2019 - Feb 2009"
       
     - logo : "images/experience/icon-2.png"
       title : "UX & UI Designer"
