homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -57,7 +57,7 @@ education:
   enable : true
   title : "Education"
   item:
-    - title : "Master Graphic Design"
+    - title : "Corso in Graphic Design"
       year : "2006"
       academy : "Masassusets Institute of Technology"
       
