homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -59,7 +59,7 @@ education:
   item:
     - title : "Corso in Graphic Design"
       year : "2006"
-      academy : "Masassusets Institute of Technology"
+      academy : "ACCA Academy, Jesi (AN)"
       
     - title : "Honours in Fine Arts"
       year : "2004"
