--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -58,7 +58,7 @@ education:
   title : "Education"
   item:
     - title : "Corso in Graphic Design"
-      year : "20"
+      year : "2019 - 2021"
       academy : "ACCA Academy, Jesi (AN)"
       
     - title : "Honours in Fine Arts"
