homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -57,7 +57,7 @@ education:
   enable : true
   title : "Education"
   item:
-    - title : "Corso in Graphic Design"
+    - title : "Master in Graphic Design"
       year : "2019 - 2021"
       academy : "ACCA Academy, Jesi (AN)"
       
