homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -71,7 +71,7 @@ education:
       
     - title : "Diploma Superiore come Perito Informatico"
       year : "2014"
-      academy : "IIS Volterra Elia, AN"
+      academy : "IIS Volterra Elia,Torrette (AN)"
 
 # service
 service:
