homepage.yml: changed

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -78,7 +78,7 @@ service:
   enable : true
   title : "Services"
   item:
-    - title : "UI Design"
+    - title : "Brand Design"
       icon : "ti-palette"
       content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
       highlighted : false
