--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -86,7 +86,7 @@ service:
     - title : "UX Design"
       icon : "ti-vector"
       content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      highlighted : true
+      highlighted : false
 
     - title : "UI Design"
       icon : "ti-panel"
