config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ logo = "images/about/DARIDIMENSIONARE CON SITO"
 theme_color = "#EDEDED"
 phone = "+880 2544 658 256"
 email = "steve.fruits@email.com"
-address = "125/A, CA Commercial Area, California, USA"
+address = "Via Varano 88, 60129, Ancona (AN), Italia"
 author = "Johnathan Smith"
 description = "This is meta description"
 google_analytics_id = ""
