config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ home = "Home"
 logo = "images/about/DARIDIMENSIONARE CON SITO"
 theme_color = "#EDEDED"
 phone = "+880 2544 658 256"
-email = "steve.fruits@email.com"
+email = "+39 366 326 2684"
 address = "Via Varano 88, 60129, Ancona (AN), Italia"
 author = "Johnathan Smith"
 description = "This is meta description"
