config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,8 @@ publishDir = "public"
 home = "Home"
 logo = "images/about/DARIDIMENSIONARE CON SITO"
 theme_color = "#EDEDED"
-phone = "+880 2544 658 256"
-email = "+39 366 326 2684"
+phone = "+39 366 326 2684"
+email = "d.verzolini@gmail.com"
 address = "Via Varano 88, 60129, Ancona (AN), Italia"
 author = "Johnathan Smith"
 description = "This is meta description"
