--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ theme_color = "#EDEDED"
 phone = "+39 366 326 2684"
 email = "d.verzolini@gmail.com"
 address = "Via Varano 88, 60129, Ancona (AN), Italia"
-author = "Johnathan Smith"
+author = "Daniele Verzolini"
 description = "This is meta description"
 google_analytics_id = ""
 copyright = "Copyright &copy; 2021 a Theme by [Gethugothemes](https://gethugothemes.com)"
